project(bcrypt-test)

add_executable(a test_bcrypt.c)
target_link_libraries(a bcrypt)

add_executable(b BCryptExportKey_RSA_test.cpp)
target_link_libraries(b bcrypt)
set_property(TARGET b PROPERTY CXX_STANDARD 17)

add_executable(c BCryptSignHash.cpp)
target_link_libraries(c bcrypt)
set_property(TARGET c PROPERTY CXX_STANDARD 17)
if (MINGW)
	set(CMAKE_EXE_LINKER_FLAGS "-static")
endif()
if (MSVC)
	set(CMAKE_FIND_LIBRARY_SUFFIXES ".lib")
	target_compile_options(a PUBLIC /MT)
	target_link_options(a PUBLIC /INCREMENTAL:NO /NODEFAULTLIB:MSVCRT)
	target_compile_options(b PUBLIC /MT)
	target_link_options(b PUBLIC /INCREMENTAL:NO /NODEFAULTLIB:MSVCRT)
	target_compile_options(c PUBLIC /MT)
	target_link_options(c PUBLIC /INCREMENTAL:NO /NODEFAULTLIB:MSVCRT)
endif()
